# DesignAndTechnologyPracticeBMSTU

./: CMakeLists.txt  README.md  main.cpp
chess/: CMakeLists.txt  chess.cpp  chess.h
games/: CMakeLists.txt  game.cpp  game.h
minesweeper/: CMakeLists.txt  minesweeper.cpp  minesweeper.h  minesweeperLogo.txt
snake/: CMakeLists.txt  snake.cpp  snake.h
src/: main.cpp
src/chess/: CMakeLists.txt  cell.cpp  cell.h  chess.cpp  chess.h  chessLogo.txt  conf.h  figure.cpp  figure.h  untils.cpp  untils.h
src/games/: CMakeLists.txt  game.cpp  game.h
src/menu/: CMakeLists.txt  menu.cpp  menu.h
src/minesweeper/: Board.cpp  Board.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Game.cpp  MainMenu.cpp  MainMenu.hpp  PlayState.cpp  PlayState.hpp  StateController.cpp  StateController.hpp  States.cpp  States.hpp  Tile.cpp  Tile.hpp  minesweeper.cpp  minesweeper.hpp
src/snake/: CMakeLists.txt  const.h  field.cpp  field.h  foodSpawner.cpp  foodSpawner.h  game.cpp  game.h  orientation.cpp  orientation.h  segment.cpp  segment.h  snake.cpp  snake.h  snakeGame.cpp  snakeGame.h
